--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
     </div>
     <!-- Header End -->
 
+    <h2>Mis documentos</h2>
+
+<p>
+  <a href="about.html" target="_blank">📄 Ver Documento 1</a>
+</p>
+
+<p>
+  <a href="ayuda.html" target="_blank">📄 Ver Documento 2</a>
+</p>
+
+<p>
+  <a href="team.html" download>⬇ Descargar Documento 3</a>
+</p>
+
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5 pb-5">
@@ -350,5 +364,6 @@ Aquí encontrarás no solo lo que necesitas, sino también un ambiente familiar,
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
